--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Ayushman\AppData\Local\Temp\testng-eclipse--1410169043\testng-customsuite.xml</span>
+                    <span>C:\Users\Ayushman\AppData\Local\Temp\testng-eclipse-1633352335\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="AyushmanDhar.RedBusQ2.AppTest" class="method navigator-link" hash-for-method="busSeatSelectionTest">busSeatSelectionTest</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="AyushmanDhar.RedBusQ2.RedBusSeatBooking" class="method navigator-link" hash-for-method="busSeatSelectionTest">busSeatSelectionTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,7 +122,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">AyushmanDhar.RedBusQ2.AppTest</span>
+              <span class="class-name">AyushmanDhar.RedBusQ2.RedBusSeatBooking</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Ayushman\AppData\Local\Temp\testng-eclipse--1410169043\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Ayushman\AppData\Local\Temp\testng-eclipse-1633352335\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;AyushmanDhar.RedBusQ2.AppTest&quot;/&gt;
+      &lt;class name=&quot;AyushmanDhar.RedBusQ2.RedBusSeatBooking&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -189,8 +189,8 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'busSeatSelectionTest')
-data.setCell(0, 2, 'AyushmanDhar.RedBusQ2.AppTest')
-data.setCell(0, 3, 12316);
+data.setCell(0, 2, 'AyushmanDhar.RedBusQ2.RedBusSeatBooking')
+data.setCell(0, 3, 12421);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -221,18 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">AyushmanDhar.RedBusQ2.AppTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">AyushmanDhar.RedBusQ2.RedBusSeatBooking</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">initializeDriver</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
                 <span class="method-name">busSeatSelectionTest</span>
-                <span class="method-start">1347 ms</span>
+                <span class="method-start">1906 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">13665 ms</span>
+                <span class="method-start">14328 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
